--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@supabase/auth-ui-react": "^0.2.6",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
-    "next": "13.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "^13.1.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
