--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/auth-helpers-nextjs": "^0.5.4",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/auth-ui-react": "^0.2.6",
+    "clsx": "^1.2.1",
     "eslint": "8.27.0",
     "next": "^13.1.5",
     "react": "^18.2.0",
